libapache2-mod-perl2 (2.0.5-1) UNRELEASED; urgency=low

  TODO:
  - DEB_BUILD_OPTIONS does not seem to work
  - Resolve doc-base issues
    Idea: support text, html, pdf
        text: pod2text
        html: pod2html
        pdf : Use libpdf-create-perl to convert .png -> .pdf
    How to recognize what is a raw text file
  - Check dependencies

  * Added myself to Uploaders
  * Upped debian compatibility level to 7 and removed quilt cruft
  * Refreshed debian/rules
  * Upped standards version to 3.9.1
  * Added versioning of depdendency between dev and core packages
  * Registered documents with doc-base (in progress)
    - Adding todo files to doc package
  * New upstream release
  * Reviewed patches
    - Removed 009_allow_parallel_build.patch [applied upstream]
    - Removed 100-svn-XSS-Status.patch [applied upstream]
    - Removed 110-Fix-two-uninitialized-....patch [applied upstream]
    - Removed 035-testrequest_add_credentials.patch [applied upstream]
  * Added patch to remove generated files
  * Email change: Andres Salomon -> dilinger@debian.org
  * Refreshed copyright

 -- Nicholas Bamber <nicholas@periapt.co.uk>  Tue, 22 Mar 2011 14:19:58 +0000

libapache2-mod-perl2 (2.0.4-7) unstable; urgency=low

  * change source Section to 'httpd'
  * add a patch from Niko Tyni avoiding two warnings about use of uninitialized
    values, which break tests under Perl 5.12. (Closes: #578481)
  * add a patch fixinf spelling errors in POD and other documentation
  * add a patch fixinng POD errors
  * add a patch fixing bad manpage whatis name
  * Standards-Version: 3.8.4
    + support 'nockeck' in DEB_BUILD_OPTIONS as per Policy 3.8.1
  * describe all patches

 -- Damyan Ivanov <dmn@debian.org>  Wed, 21 Apr 2010 12:48:11 +0300

libapache2-mod-perl2 (2.0.4-6) unstable; urgency=high

  [ gregor herrmann ]
  * debian/control: Changed: (build-)depend on perl instead of perl-
    modules.

  [ Dario Minnucci ]