@@ -7,7 +7,9 @@ libapache2-mod-perl2 (2.0.5-1) UNRELEASED; urgency=low
         text: pod2text
         html: pod2html
         pdf : Use libpdf-create-perl to convert .png -> .pdf
-    How to recognize what is a raw text file
+    Need to index HTML files
+    Check that there are as few broken links as possible
+  - doc package should recommend dwww
   - Check dependencies
 
   * Added myself to Uploaders
@@ -17,6 +19,7 @@ libapache2-mod-perl2 (2.0.5-1) UNRELEASED; urgency=low
   * Added versioning of depdendency between dev and core packages
   * Registered documents with doc-base (in progress)
     - Adding todo files to doc package
+    - Experimental script to transform pod files to HTML
   * New upstream release
   * Reviewed patches
     - Removed 009_allow_parallel_build.patch [applied upstream]
